readMe modif